--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Permissions-Policy" content="screen-wake-lock=()" />
     <title>Finger Training Timer</title>
     <style>
+      :root {
+        --vh: 1vh; /* Fallback for browsers that don't support dvh */
+      }
+
       * {
         margin: 0;
         padding: 0;
@@ -17,11 +21,16 @@
         background: #000;
         color: #fff;
         min-height: 100vh;
+        min-height: calc(var(--vh, 1vh) * 100); /* Fallback for older browsers */
+        min-height: 100dvh; /* Dynamic viewport height for mobile */
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
+        height: calc(var(--vh, 1vh) * 100); /* Fallback for older browsers */
+        height: 100dvh; /* Dynamic viewport height for mobile */
         width: 100vw;
+        width: 100dvw; /* Dynamic viewport width for mobile */
         padding: 0;
         margin: 0;
       }
@@ -35,6 +44,8 @@
         justify-content: space-between;
         width: 100%;
         height: 100vh;
+        height: calc(var(--vh, 1vh) * 100); /* Fallback for older browsers */
+        height: 100dvh; /* Dynamic viewport height for mobile */
         border: 4px solid #ffff00;
         padding: 20px;
       }
@@ -128,7 +139,10 @@
       :-moz-full-screen .container,
       :-ms-fullscreen .container {
         height: 100vh;
+        height: calc(var(--vh, 1vh) * 100); /* Fallback for older browsers */
+        height: 100dvh; /* Dynamic viewport height for mobile */
         width: 100vw;
+        width: 100dvw; /* Dynamic viewport width for mobile */
         border: none;
         padding: 20px;
       }
@@ -394,6 +408,19 @@
         setTimeout(() => playBeep(1200, 0.2), 200);
         setTimeout(() => playBeep(1500, 0.3), 400);
       }
+
+      // Mobile viewport height fix for older browsers
+      function setMobileViewportHeight() {
+        const vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', `${vh}px`);
+      }
+
+      // Set viewport height on load and resize
+      setMobileViewportHeight();
+      window.addEventListener('resize', setMobileViewportHeight);
+      window.addEventListener('orientationchange', () => {
+        setTimeout(setMobileViewportHeight, 100);
+      });
 
       // Release wake lock when page is unloaded or refreshed
       window.addEventListener('beforeunload', releaseWakeLock);
