Implement aggressive iPhone sleep prevention with multiple strategies
- Add hidden video element with canvas stream (most reliable for iPhone)
- Implement multiple wake lock strategies running simultaneously
- Add aggressive no-sleep interval with touch event simulation
- Reduce audio keep-alive interval to 5 seconds
- Add comprehensive cleanup for all wake lock resources
- This should finally prevent iPhone from sleeping during workouts

--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
           videoElement.srcObject = stream;
           videoElement.loop = true;
           videoElement.muted = true;
+          videoElement.volume = 0;
+          videoElement.setAttribute('autoplay', '');
           videoElement.play().catch(e => console.log('Video play failed:', e));
 
           document.body.appendChild(videoElement);
