--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <body>
     <div class="container">
       <div class="exercise-info">
-        <div class="exercise-name" id="exerciseName">READY 1.1</div>
+        <div class="exercise-name" id="exerciseName">READY</div>
         <div class="exercise-details" id="exerciseDetails">&nbsp;</div>
       </div>
 
