--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <body>
     <div class="container">
       <div class="exercise-info">
-        <div class="exercise-name" id="exerciseName">READY</div>
+        <div class="exercise-name" id="exerciseName">READY FOR CRIMP</div>
         <div class="exercise-details" id="exerciseDetails">&nbsp;</div>
       </div>
 
@@ -207,7 +207,7 @@
           if ('wakeLock' in navigator) {
             wakeLock = await navigator.wakeLock.request('screen');
             console.log('Wake lock acquired');
-            
+
             // Handle wake lock release
             wakeLock.addEventListener('release', () => {
               console.log('Wake lock released');
@@ -413,7 +413,7 @@
 
       // Handle visibility changes - re-activate wake lock when tab becomes active
       let wasWakeLockActive = false;
-      
+
       window.addEventListener('visibilitychange', async () => {
         if (document.hidden) {
           // Tab became hidden - remember if wake lock was active
