--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   </head>
   <body>
     <!-- Version label -->
-    <div class="version-label" id="versionLabel">v1.0.3</div>
+    <div class="version-label" id="versionLabel">v1.0.4</div>
 
     <div class="container">
       <div class="exercise-info">
@@ -191,17 +191,17 @@
     <script>
       const exercises = [
         { name: 'Half Crimp', sets: 6, workTime: 10, restTime: 15 },
-        { name: '3 Finger Drag', sets: 6, workTime: 10, restTime: 15 },
-        { name: 'Front 2 Finger Drag', sets: 2, workTime: 10, restTime: 15 },
-        { name: 'Middle 2 Finger Drag', sets: 2, workTime: 10, restTime: 15 },
+        { name: '3 Drag', sets: 6, workTime: 10, restTime: 15 },
+        { name: 'Front 2 Drag', sets: 2, workTime: 10, restTime: 15 },
+        { name: 'Middle 2 Drag', sets: 2, workTime: 10, restTime: 15 },
         {
-          name: 'Front 2 Finger Half Crimp',
+          name: 'Front 2 Half Crimp',
           sets: 2,
           workTime: 10,
           restTime: 15
         },
         {
-          name: 'Middle 2 Finger Half Crimp',
+          name: 'Middle 2 Half Crimp',
           sets: 2,
           workTime: 10,
           restTime: 15
@@ -285,11 +285,13 @@
           } of ${exercise.sets}`;
         } else {
           document.getElementById('exerciseName').textContent = 'REST';
-          document.getElementById('exerciseDetails').textContent = `${
+          document.getElementById('exerciseDetails').textContent = `Set ${
+            currentSet + 1
+          } of ${exercise.sets} - ${
             currentSet < exercise.sets - 1
-              ? exercise.name
+              ? 'Next: ' + exercise.name
               : currentExerciseIndex < exercises.length - 1
-              ? exercises[currentExerciseIndex + 1].name
+              ? 'Next: ' + exercises[currentExerciseIndex + 1].name
               : 'Complete!'
           }`;
         }
